--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@planecha.se/bridge",
   "version": "0.0.0",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "files": [
-    "src/"
+    "lib/"
   ],
   "license": "AGPL-3.0-or-later",
   "scripts": {
